--- a/生命周期.md
+++ b/生命周期.md
@@ -2,12 +2,16 @@ React组件的生命周期可以分为三个阶段：挂载、更新和卸载。
 ![LifeCycle](/images/lifecycle.png)
 ## 挂载阶段
 1. constructor(props): 组件的构造函数，用于初始化state和绑定事件处理函数，该方法只会在组件挂载之前调用一次。
-2. render(): 该方法是必须的，否则组件将无法渲染。根据`state`和`props`渲染组件，返回需要渲染的内容。
-3. componentDidMount(): 该方法在组件挂载后（插入 DOM 树中）调用，依赖于 DOM 节点的初始化、发送网络请求，添加订阅等操作应该放在这个阶段执行。
+2. getDerivedStateFromProps()：在组件被创建时和组件收到新的props时调用，用于更新组件的状态。
+3. render(): 该方法是必须的，否则组件将无法渲染。根据`state`和`props`渲染组件，返回需要渲染的内容。
+4. componentDidMount(): 该方法在组件挂载后（插入 DOM 树中）调用，依赖于 DOM 节点的初始化、发送网络请求，添加订阅等操作应该放在这个阶段执行。
 
 ## 更新阶段
-1. render(): 在组件更新时，该方法会在shouldComponentUpdate返回true后调用。
-2. componentDidUpdate(): 该方法在组件更新后调用，首次渲染不会触发此方法。通常用于进行一些DOM操作或清理工作。
+1. getDerivedStateFromProps()：在组件被创建时和组件收到新的props时调用，用于更新组件的状态。
+2. shouldComponentUpdate()：在组件更新前调用，用于决定是否需要更新组件。
+3. render(): 在组件更新时，该方法会在shouldComponentUpdate返回true后调用。
+4. getSnapshotBeforeUpdate()：在组件更新前调用，用于获取更新前的快照信息。
+5. componentDidUpdate(): 该方法在组件更新后调用，首次渲染不会触发此方法。通常用于进行一些DOM操作或清理工作。
 
 ## 卸载阶段
 1. componentWillUnmount(): 该方法在组件卸载及销毁之前调用，通常用于清理一些副作用，例如，清除 timer，取消网络请求或清除在 componentDidMount() 中创建的订阅等。
