--- a/生命周期.md
+++ b/生命周期.md
@@ -26,7 +26,7 @@ React组件的生命周期可以分为三个阶段：挂载、更新和卸载。
 - 挂载完成之后就会执行 componentDidUpdate 生命周期函数
 - 当移除组件时，就会执行 componentWillUnmount 生命周期函数
 
-## state和props触发更新的生命周期、
+## state和props触发更新的生命周期
 ![LifeCycle1](/images/lifecycle1.png)  
 这个过程当中涉及的函数:  
 1. shouldComponentUpdate: 当组件的 state 或 props 发生改变时，都会首先触发这个生命周期函数。它会接收两个参数: nextProps, nextState ——它们分别代表传入的新 props 和新的 state 值。拿到这两个值之后，我们就可以通过一些对比逻辑来决定是否有 re-render (重渲染)的必要了。如果该函数的返回值为false，则生命周期终止，反之继续;  
