--- a/生命周期.md
+++ b/生命周期.md
@@ -1,41 +1,25 @@
 React组件的生命周期可以分为三个阶段：挂载、更新和卸载。每个阶段都有对应的生命周期方法。下面是React组件的生命周期方法和它们的执行顺序：  
 ![LifeCycle](/images/lifecycle.png)
-## 挂载阶段
+# 挂载阶段
 1. constructor(props): 组件的构造函数，用于初始化state和绑定事件处理函数，该方法只会在组件挂载之前调用一次。
 2. getDerivedStateFromProps()：在组件被创建时和组件收到新的props时调用，用于更新组件的状态。
 3. render(): 该方法是必须的，否则组件将无法渲染。根据`state`和`props`渲染组件，返回需要渲染的内容。
 4. componentDidMount(): 该方法在组件挂载后（插入 DOM 树中）调用，依赖于 DOM 节点的初始化、发送网络请求，添加订阅等操作应该放在这个阶段执行。
 
-## 更新阶段
+# 更新阶段
 1. getDerivedStateFromProps()：在组件被创建时和组件收到新的props时调用，用于更新组件的状态。
 2. shouldComponentUpdate()：在组件更新前调用，用于决定是否需要更新组件。
-3. render(): 在组件更新时，该方法会在shouldComponentUpdate返回true后调用。
+3. render(): 在组件更新时，该方法会在shouldComponentUpdate返回true后调用，返回需要更新的内容。
 4. getSnapshotBeforeUpdate()：在组件更新前调用，用于获取更新前的快照信息。
 5. componentDidUpdate(): 该方法在组件更新后调用，首次渲染不会触发此方法。通常用于进行一些DOM操作或清理工作。
 
-## 卸载阶段
+# 卸载阶段
 1. componentWillUnmount(): 该方法在组件卸载及销毁之前调用，通常用于清理一些副作用，例如，清除 timer，取消网络请求或清除在 componentDidMount() 中创建的订阅等。
 
-## React 常见生命周期的过程大致如下：
-- 挂载阶段，首先执行 constructor 构造方法，来创建组件
-- 创建完成之后，就会执行 render 方法，该方法会返回需要渲染的内容
-- 随后，React 会将需要渲染的内容挂载到 DOM 树上
-- 挂载完成之后会执行 componentDidMount 生命周期函数
-- 如果我们给组件创建一个 props（用于组件通信）、调用 setState（更改 state 中的数据）、调用 forceUpdate（强制更新组件）时，都会重新调用 render 函数
-- render 函数重新执行之后，就会重新进行 DOM 树的挂载
-- 挂载完成之后就会执行 componentDidUpdate 生命周期函数
-- 当移除组件时，就会执行 componentWillUnmount 生命周期函数
-
-## state和props触发更新的生命周期
-![LifeCycle1](/images/lifecycle1.png)  
-这个过程当中涉及的函数:  
-1. shouldComponentUpdate: 当组件的 state 或 props 发生改变时，都会首先触发这个生命周期函数。它会接收两个参数: nextProps, nextState ——它们分别代表传入的新 props 和新的 state 值。拿到这两个值之后，我们就可以通过一些对比逻辑来决定是否有 re-render (重渲染)的必要了。如果该函数的返回值为false，则生命周期终止，反之继续;  
-
-2. componentwillUpdate: 当组件的 state 或 props 发生改变时，会在渲染之前调用 componentwillupdate。componentwillUpdate 是 React16 废弃的三个生命周期之一。过去，我们可能希望能在这个阶段去收集一些必要的信息（比如更新前的 DOM 信息等等），现在我们完全可以在 React16 的 getSnapshotBeforeUpdate 中去做这些事;  
-
-3. componentDidUpdate: componentDiduUpdate() 会在 UI 更新后会被立即调用。它接收 prevProps (上一次的props值)作为入参，也就是说在此处我们仍然可以进行 props 值对比  
-
-4. 相对于 state 更新，props更新后唯一的区别是增加了对 componentWillReceiveProps 的调用（在shouldComponentUpdate之前）。关于componentWillReceiveProps，需要知道这些事情:  
-componentWillReceiveProps: 它在 Component 接受到新的 props 时被触发。componentWillReceiveProps 会接收一个名为 nextProps 的参数(对应新的 props 值)。该生命周期是 React16 废弃掉的三个生命周期之一。在它被废弃前，可以用它来比较 this.props 和 nextProps 来重新 setstate。在 React16 中，用一个类似的新生命周期 getDerivedStateFromProps 来代替它。
-
-详细查阅[React官网](https://react.zcopy.site/docs/react-component.html)
+# 父子组件生命周期执行顺序
+1. 父组件先执行自己的 constructor 构造函数，接着是 getDerivedStateFromProps 静态方法，然后是 render 方法。    
+2. 子组件先执行自己的 constructor 构造函数，接着是 getDerivedStateFromProps 静态方法，然后是 render 方法。  
+3. 子组件的 render 方法返回的虚拟 DOM 会被挂载到父组件返回的虚拟 DOM 中。 
+4. 子组件接着执行 componentDidMount 方法，表示子组件已经完成挂载。 
+5. 父组件接着执行 componentDidMount 方法，表示父组件已经完成挂载。  
+  
